# set_eye_tracking_cooking_recipes

./: README.md  pyproject.toml
SET_Graml_Kreil_Dezember_2023/: Formblatt.docx
SET_Graml_Kreil_Dezember_2023/Daten/: surveys.csv
SET_Graml_Kreil_Dezember_2023/Dokumentation/: Dokumentation.pptx  Präsentation.pptx
SET_Graml_Kreil_Dezember_2023/Erhebung/: Transkript.docx
docs/: .$class_diagramm.drawio.bkp  Formblatt.docx  class_diagramm.drawio  conecpt.docx  scientific_poster.pptx  set_eye_tracking_cooking_recipes.pptx  survey.docx  ~$onecpt.docx  ~$rmblatt.docx  ~$set_eye_tracking_cooking_recipes.pptx
set_eye_tracking_cooking_recipes/data/: set_eye_tracking_cooking_recipes_Metrics.tsv
set_eye_tracking_cooking_recipes/entities/: test.py  test_aoi_metrics.py  test_data.py  test_person.py
set_eye_tracking_cooking_recipes/presentation_notebooks/: presentation.ipynb
set_eye_tracking_cooking_recipes/test_notebooks/: aoi_plausibilty.ipynb  aoi_sequence.ipynb  average_aoi_sequence.ipynb  heatmap.ipynb  picture_visual_anker.ipynb  random_tests.ipynb  test_bar_plot.ipynb
