[tool.poetry]
name = "set-eye-tracking-cooking-recipes"
version = "0.1.0"
description = ""
authors = [
    "Michael Graml <michael.graml@st.oth-regensburg.de>, Leonard Kreil <leonard.kreil@st.oth-regensburg.de>",
]
readme = "README.md"
packages = [{ include = "set_eye_tracking_cooking_recipes" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
